--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,36 +1,9 @@
-<div class="jumbotron">
-  <h2><%= gettext "Welcome to %{name}", name: "Phoenix!" %></h2>
-  <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
-</div>
-
-<div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Resources</h4>
-    <ul>
-      <li>
-        <a href="http://phoenixframework.org/docs/overview">Guides</a>
-      </li>
-      <li>
-        <a href="https://hexdocs.pm/phoenix">Docs</a>
-      </li>
-      <li>
-        <a href="https://github.com/phoenixframework/phoenix">Source</a>
-      </li>
-    </ul>
+<div style="position: relative; top: 50%; transform: translateY(-50%); text-align: center;">
+  <div style="font-size: 10em;">
+    <span id="depth">11.7</span><span style="font-size: 0.5em;">m</span>
   </div>
-
-  <div class="col-lg-6">
-    <h4>Help</h4>
-    <ul>
-      <li>
-        <a href="http://groups.google.com/group/phoenix-talk">Mailing list</a>
-      </li>
-      <li>
-        <a href="http://webchat.freenode.net/?channels=elixir-lang">#elixir-lang on freenode IRC</a>
-      </li>
-      <li>
-        <a href="https://twitter.com/elixirphoenix">@elixirphoenix</a>
-      </li>
-    </ul>
+  <div style="font-size: 3em; color: orange;">
+    You should probably evacuate
   </div>
 </div>
+<div id="water" style="position: absolute; bottom: 0; height: 200px; width: 100%; background-color: #39f; z-index: -1;"></div>
