--- a/web/templates/page/index.html.eex
+++ b/web/templates/page/index.html.eex
@@ -1,13 +1,10 @@
-<!-- <div style="position: relative; top: 50%; transform: translateY(-50%); text-align: center;">
-  <div style="font-size: 10em;">
-    <span id="depth">11.7</span><span style="font-size: 0.5em;">m</span>
-  </div>
-  <div style="font-size: 3em; color: orange;">
-    You should probably evacuate
-  </div>
-</div>
-<div id="water" style="position: absolute; bottom: 0; height: 200px; width: 100%; background-color: #39f; z-index: -1;">
-</div> -->
-
 <div style="position:absolute;bottom:0;top:0;width:100%" id="canvas">
+  <div style="position: relative; top: 50%; text-align: center; z-index:1000">
+    <div style="font-size: 10em;">
+      <span id="depth">11.7</span><span style="font-size: 0.5em;">m</span>
+    </div>
+    <div style="font-size: 3em; color: orange;">
+      Aaaaaaaaaaaahhhhhh!!!!
+    </div>
+  </div>
 </div>
