--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -17,6 +17,7 @@
 
   <body>
     <%= render @view_module, @view_template, assigns %>
+    <script src="<%= static_path(@conn, "/js/particles.min.js") %>"></script>
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
   </body>
 </html>
